<resources>
    <string name="app_name">SecondHand</string>

    <string name="text_masuk">Masuk</string>
    <string name="text_email">Email</string>
    <string name="text_contoh_input_email">Contoh: JohnDoe@email.com</string>
    <string name="text_password">Password</string>
    <string name="text_hint_masukkan_password">Masukkan password</string>
    <string name="text_belum_punya_akun">Belum punya akun?</string>
    <string name="text_daftar_di_sini">Daftar di sini</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Ini Halaman Detail Fragment</string>
    <string name="text_judul">Jam Tangan Casio</string>
    <string name="text_keterangan">Aksesoris</string>
    <string name="text_harga">Rp 250.000</string>
    <string name="text_nama_penjual">Nama Penjual</string>
    <string name="text_kota">Kota</string>
    <string name="text_judul_deskripsi">Deskripsi</string>
    <string name="text_deskripsi">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="telusuri_kategori">Telusuri Kategori</string>
    <string name="kategori_semua">Semua</string>
    <string name="kategori_minuman">Minuman</string>
    <string name="kategori_elektronik">Elektronik</string>
    <string name="kategori_lainnya">Lainnya</string>
    <string name="daftar">Daftar</string>
    <string name="masukkan_nama">Masukkan nama</string>
    <string name="masukkan_nomor_handphone">Contoh : +62891188989</string>
    <string name="masukkan_alamat">Masukkan alamat</string>
    <string name="seller">Seller</string>
    <string name="kategori">Kategori:</string>
    <string name="harga_produk">harga produk</string>
    <string name="daftar_jual_saya">DAFTAR JUAL SAYA</string>
    <string name="text_satu_via_wa">Yeay kamu berhasil mendapat harga yang sesuai</string>
    <string name="text_dua_via_wa">Segera hubungi pembeli melalui whatsapp untuk transaksi selanjutnya</string>
    <string name="text_produk_match">Produk Match</string>
    <string name="text_hubungi_via_whatsapp">Hubungi via WhatsApp</string>
    <string name="text_harga_tawar">Ditawar Rp 200.000</string>
    <string name="info_penawar">Info Penawar</string>
    <string name="nama_pembeli">Nama Pembeli</string>
    <string name="kota">Kota</string>
    <string name="login">LOGIN</string>
    <string name="anda_belum_login">Anda belum login</string>
    <string name="nama_barang">Nama barang</string>
    <string name="harga_barang">Harga barang</string>
    <string name="kategori_barang">Kategori barang</string>
    <string name="lokasi_toko">Lokasi toko</string>
    <string name="deskripsi_produk">Deskripsi produk</string>
    <string name="foto_produk">Foto produk</string>
    <string name="img">img</string>
    <string name="preview">Preview</string>
    <string name="terbitkan">Terbitkan</string>
    <string name="jual_produk_baru">Jual Produk Baru</string>
    <string name="akun_saya">AKUN SAYA</string>
    <string name="edit_profile">Edit profile</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="log_out">Log Out</string>
    <string name="buyer">Buyer</string>
    <string name="status">status</string>
    <string name="aksi">Aksi</string>
    <string name="home">Home</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="jual">Jual</string>
    <string name="daftar_jual">Daftar Jual</string>
    <string name="akun">Akun</string>
    <string name="hobi">Hobi</string>
    <string name="kendaraan">Kendaraan</string>
    <string name="tolak">Tolak</string>
    <string name="terima">Terima</string>
    <string name="tanggal_transaksi">tanggal_transaksi</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_handphone">Nomor handphone</string>
    <string name="simpan">Simpan</string>
    <string name="nama_produk">Nama produk</string>
    <string name="masukkan_nama_produk">Masukkan nama produk</string>
    <string name="kategori_produk">Kategori produk</string>
    <string name="masukkan_kategori_produk">Masukkan kategori produk</string>
    <string name="masukkan_lokasi_toko">Masukkan lokasi toko</string>
    <string name="add">+</string>
    <string name="update_produk">Update Produk</string>
    <string name="masukkan_deskripsi_produk">Masukkan deskripsi produk</string>

    <string name="text_perbarui_status">Perbarui status penjualan produkmu</string>
    <string name="text_berhasil_terjual">Berhasil terjual</string>
    <string name="text_ket_berhasil_terjual">Kamu telah sepakat menjual produk ini kepada pembeli</string>
    <string name="text_batalkan_transaksi">Batalkan transaksi</string>
    <string name="text_ket_batalkan_transaksi">Kamu membatalkan transaksi produk ini dengan pembeli</string>
    <string name="text_kirim">Kirim</string>
    <string name="pilih">Pilih</string>
    <string name="hubungi">hubungi</string>
    <string name="makanan">Makanan</string>
    <string name="biometric">Biometric</string>
    <string name="nama_user">Nama User</string>
    <string name="histori">Histori</string>
    <string name="nama_product">Nama product</string>
    <string name="label_transaksi">Label transaksi</string>
    <string name="notifikasi_page">NOTIFIKASI</string>
    <string name="perbarui_produk">Perbarui Produk</string>
    <string name="informasi_produk">Informasi Produk</string>
    <string name="keluar">Keluar</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>