<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_daftar_jual_terjual"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/card_daftar_jual_terjual_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_daftar_jual_terjual_nama_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seller"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_daftar_jual_terjual_nama_buyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyer"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/card_daftar_jual_terjual_nama_produk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_produk"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/card_daftar_jual_terjual_harga_tawar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_produk"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/card_daftar_jual_terjual_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>