<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".view.activity.LengkapiInfoAkun"
    android:padding="10dp"
    android:background="@drawable/custom_app_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title_lengkapi_info_akun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="Lengkapi Info Akun"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/title_lengkapi_info_akun">
            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/update_image_user_button"
                android:background="@color/image_picker_background">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:id="@+id/update_image_user_uri"
                    android:contentDescription="@string/img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="+"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/nama"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text_layout"
                android:padding="10dp"
                android:hint="@string/masukkan_nama"
                android:textSize="16sp"
                android:id="@+id/update_nama_user"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"
                android:importantForAutofill="no"
                android:inputType="text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/kota"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text_layout"
                android:padding="10dp"
                android:hint="@string/kota"
                android:textSize="16sp"
                android:id="@+id/update_kota_user"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"
                android:importantForAutofill="no"
                android:inputType="text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/alamat"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text_layout"
                android:padding="10dp"
                android:hint="@string/masukkan_alamat"
                android:textSize="16sp"
                android:id="@+id/update_alamat_user"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"
                android:importantForAutofill="no"
                android:inputType="text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/nomor_handphone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text_layout"
                android:padding="10dp"
                android:id="@+id/update_nomor_handphone_user"
                android:hint="@string/masukkan_nomor_handphone"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="15dp"
                android:importantForAutofill="no"
                android:inputType="phone" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/simpan"
                android:id="@+id/update_button_simpan"
                android:background="@drawable/custom_button_layout_2"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>